--- a/SneakerOutside2/Views/Home/Index.cshtml
+++ b/SneakerOutside2/Views/Home/Index.cshtml
@@ -4,22 +4,91 @@
     ViewData["Title"] = "Home";
 }
 
-<section id="hero"></section>
-
-<section id="product1" class="section-p1">
-    <h2>Danh sách sản phẩm</h2>
-    <div class="pro-container">
-        @foreach (var item in Model)
-        {
-            <div class="pro">
-                <a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductID">
-                    <img src="@("https://localhost:44344/Images/" + item.Image)" alt="" />
-                </a>
-                <div class="des">
-                    <h5>@item.ProductName</h5>
-                    <h4>VNĐ @item.Price.ToString("n0")</h4>
-                </div>
-            </div>
-        }
+<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></button>
     </div>
-</section>
+    <div class="carousel-inner" style="height: 95vh">
+        <div class="carousel-item active">
+            <img src="~/Images/carousel-1.jpg" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="~/Images/carousel-2.jpg" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="~/Images/carousel-3.jpeg" class="d-block w-100">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-6 highlight" style="background-image: url('../Images/highlight-1.jpg'); color: white">
+            <h1>Hàng mới</h1>
+        </div>
+        <div class="col-6 highlight">
+            <div class="owl-carousel owl-theme">
+                @foreach (var item in Model)
+                {
+                    <div class="col">
+                        <div class="card text-center" style="border: none">
+                            <a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductID">
+                                <img src="@("https://localhost:44344/Images/" + item.Image)" class="card-img-top">
+                                <div class="card-body">
+                                    <h5 class="card-title">@item.ProductName</h5>
+                                    <p class="card-text">@item.MinPrice</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6 highlight">
+            <div class="owl-carousel owl-theme">
+                @foreach (var item in Model)
+                {
+                    <div class="col">
+                        <div class="card text-center" style="border: none">
+                            <a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductID">
+                                <img src="@("https://localhost:44344/Images/" + item.Image)" class="card-img-top">
+                                <div class="card-body">
+                                    <h5 class="card-title">@item.ProductName</h5>
+                                    <p class="card-text">@item.MinPrice</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+        <div class="col-6 highlight" style="background-image: url('../Images/highlight-2.jpg'); color: white">
+            <h1>Bán nhiều nhất</h1>
+        </div>
+    </div>
+</div>
+
+@section Scripts{
+    <script type="text/javascript">
+        $('.owl-carousel').owlCarousel({
+            item: 3,
+            loop: true,
+            margin: 10,
+            autoplay: true,
+            autoplayTimeout: 3000,
+            autoplayHoverPause: true
+        })
+    </script>
+}
