--- a/SneakerOutside2/Views/Shared/_Layout.cshtml
+++ b/SneakerOutside2/Views/Shared/_Layout.cshtml
@@ -4,59 +4,105 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Font awesome-->
+    <link href="~/lib/fontawesome/css/all.css" rel="stylesheet" />
+    <!--Owl carousel-->
+    <link href="~/lib/owlCarousel/owl.carousel.min.css" rel="stylesheet" />
+    <link href="~/lib/owlCarousel/owl.theme.default.min.css" rel="stylesheet" />
+    <!--Custom-->
     <link href="~/css/Layout.css" rel="stylesheet" />
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
-    <section id="header">
-        <a asp-controller="Home" asp-action="Index">
-            <img src="~/Images/logo1.png" class="logo" alt="" />
-        </a>
-        <div>
-            <ul id="navbar">
-                <li><a asp-controller="Cart" asp-action="Index"><i class="far fa-shopping-bag fa-3x"></i></a></li>
-            </ul>
+    @*<section id="header">
+            <a asp-controller="Home" asp-action="Index">
+                <img src="~/Images/logo1.png" class="logo" alt="" />
+            </a>
+            <div>
+                <ul id="navbar">
+                    <li><a asp-controller="Cart" asp-action="Index"><i class="far fa-shopping-bag fa-3x"></i></a></li>
+                </ul>
+            </div>
+        </section>*@
+
+    @*<section id="product1" class="section-p1">
+            <h2>Danh sách sản phẩm</h2>
+            <div class="pro-container">
+                @foreach (var item in Model)
+                {
+                    <div class="pro">
+                        <a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductID">
+                            <img src="@("https://localhost:44344/Images/" + item.Image)" alt="" />
+                        </a>
+                        <div class="des">
+                            <h5>@item.ProductName</h5>
+                            <h4>VNĐ @item.MinPrice</h4>
+                            <h4>VNĐ @item.MinPrice.ToString("n0")</h4>
+                        </div>
+                    </div>
+                }
+            </div>
+        </section>*@
+
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse"></div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item px-5">
+                        <h5><a asp-controller="Home" asp-action="Index" class="nav-link">Trang chủ</a></h5>
+                    </li>
+                    <li class="nav-item px-5">
+                        <h5><a asp-controller="Product" asp-action="Index" class="nav-link">Sản phẩm</a></h5>
+                    </li>
+                    @*<li class="nav-item px-5">
+                            <h5><a class="nav-link">Giới thiệu</a></h5>
+                        </li>
+                        <li class="nav-item px-5">
+                            <h5><a class="nav-link">Liên hệ</a></h5>
+                        </li>*@
+                </ul>
+                <ul class="navbar-nav">
+                    <li><a asp-controller="Cart" asp-action="Index"><i class="fa fa-light fa-cart-shopping fa-2xl" style="color:white"></i></a></li>
+                </ul>
+            </div>
         </div>
-    </section>
+    </nav>
 
     @RenderBody()
 
-    <footer class="section-p1">
-        <div class="col">
-            <img class="logo" src="~/Images/logo1.png" alt="" />
-            <h4>Liên hệ</h4>
-            <p><strong>Địa chỉ:</strong> 94 Lê Thanh Nghị, Bách Khoa, Hai Bà Trưng, Hà Nội</p>
-            <p><strong>Số điện thoại:</strong> 0352398695</p>
-            <p><strong>Giờ mở cửa:</strong> 8:00 - 17:30, thứ 2 - thứ 6</p>
-        </div>
-        <div class="col">
-            <h4>Giới thiệu</h4>
-            <a href="#">Về chúng thôi</a>
-            <a href="#">Chính sách đổi trả</a>
-            <a href="#">Chính sách riêng tư</a>
-            <a href="#">Liên hệ</a>
-        </div>
-        <div class="col">
-            <h4>Tài khoản</h4>
-            <a href="#">Đăng nhập</a>
-            <a href="#">Xem giỏ hàng</a>
-            <a href="#">Xem đơn hàng</a>
-        </div>
-        <div class="col install">
-            <h4></h4>
-            <p></p>
-            <div class="row">
-                <img />
-                <img />
+    <footer class=" bg-dark text-white pt-5 pb-4 mt-auto">
+        <div class="container">
+            <div class="row text-left">
+                <div class="col-3 mx-auto mt-3">
+                    <h5 class="text-uppercase font-weight-bold">Liên hệ</h5>
+                    <p><strong>Địa chỉ:</strong> 94 Lê Thanh Nghị, Bách Khoa, Hai Bà Trưng, Hà Nội</p>
+                    <p><strong>Số điện thoại:</strong> 0352398695</p>
+                    <p><strong>Giờ mở cửa:</strong> 8:00 - 17:30, thứ 2 - thứ 6</p>
+                </div>
+                <div class="col-2 mx-auto mt-3">
+                    <h5 class="text-uppercase font-weight-bold">Giới thiệu</h5>
+                    <p><a href="#" class="text-white">Về chúng tôi</a></p>
+                    <p><a href="#" class="text-white">Chính sách đổi trả</a></p>
+                    <p><a href="#" class="text-white">Chính sách riêng tư</a></p>
+                    <p><a href="#" class="text-white">Liên hệ</a></p>
+                </div>
+                <div class="col-2 mx-auto mt-3">
+                    <h5 class="text-uppercase font-weight-bold">Tài khoản</h5>
+                    <p><a href="#" class="text-white">Đăng nhập</a></p>
+                    <p><a href="#" class="text-white">Xem giỏ hàng</a></p>
+                    <p><a href="#" class="text-white">Xem đơn hàng</a></p>
+                </div>
             </div>
-            <p></p>
-            <img />
         </div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <!--Owl carousel-->
+    <script src="~/lib/owlCarousel/owl.carousel.min.js"></script>
+    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
