Thiennbm - hoàn thiện giỏ hàng và thanh toán

--- a/SneakerInside/Views/ImageProduct/Index.cshtml
+++ b/SneakerInside/Views/ImageProduct/Index.cshtml
@@ -49,7 +49,7 @@
                     {
                         data: 'imageID',
                         render: function (data) {
-                            return '<button type="button" class="btn btn-info" onclick="updateModal(' + data + ')"><i class="fas fa-edit"></i></button ><button type = "button" class="btn btn-danger" style = "margin-left:5px" onclick = "deleteModal(' + data + ')"><i class="fas fa-trash-alt"></i></button >';
+                            return '<button type = "button" class="btn btn-danger" onclick = "deleteModal(' + data + ')"><i class="fas fa-trash-alt"></i></button >';
                         },
                         orderable: false,
                         width: '100px'
