--- a/SneakerOutside2/Views/Home/Index.cshtml
+++ b/SneakerOutside2/Views/Home/Index.cshtml
@@ -12,10 +12,10 @@
     </div>
     <div class="carousel-inner" style="height: 95vh">
         <div class="carousel-item active">
-            <img src="~/Images/carousel-1.jpg" class="d-block w-100">
+            <img src="~/Images/carousel-2.jpg" class="d-block w-100">
         </div>
         <div class="carousel-item">
-            <img src="~/Images/carousel-2.jpg" class="d-block w-100">
+            <img src="~/Images/carousel-1.jpg" class="d-block w-100">
         </div>
         <div class="carousel-item">
             <img src="~/Images/carousel-3.jpeg" class="d-block w-100">
@@ -46,7 +46,7 @@
                                 <img src="@("https://localhost:44344/Images/" + item.Image)" class="card-img-top">
                                 <div class="card-body">
                                     <h5 class="card-title">@item.ProductName</h5>
-                                    <p class="card-text">@item.MinPrice</p>
+                                    <p class="card-text">@item.MinPrice.ToString("n0") VNĐ</p>
                                 </div>
                             </a>
                         </div>
@@ -66,7 +66,7 @@
                                 <img src="@("https://localhost:44344/Images/" + item.Image)" class="card-img-top">
                                 <div class="card-body">
                                     <h5 class="card-title">@item.ProductName</h5>
-                                    <p class="card-text">@item.MinPrice</p>
+                                    <p class="card-text">@item.MinPrice.ToString("n0") VNĐ</p>
                                 </div>
                             </a>
                         </div>
