--- a/SneakerOutside2/Views/Shared/_Layout.cshtml
+++ b/SneakerOutside2/Views/Shared/_Layout.cshtml
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
-    @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- DataTables -->
+    <link href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" rel="stylesheet" />
     <!--Font awesome-->
     <link href="~/lib/fontawesome/css/all.css" rel="stylesheet" />
     <!--Owl carousel-->
@@ -15,37 +17,6 @@
     <link href="~/css/Layout.css" rel="stylesheet" />
 </head>
 <body class="d-flex flex-column min-vh-100">
-
-    @*<section id="header">
-            <a asp-controller="Home" asp-action="Index">
-                <img src="~/Images/logo1.png" class="logo" alt="" />
-            </a>
-            <div>
-                <ul id="navbar">
-                    <li><a asp-controller="Cart" asp-action="Index"><i class="far fa-shopping-bag fa-3x"></i></a></li>
-                </ul>
-            </div>
-        </section>*@
-
-    @*<section id="product1" class="section-p1">
-            <h2>Danh sách sản phẩm</h2>
-            <div class="pro-container">
-                @foreach (var item in Model)
-                {
-                    <div class="pro">
-                        <a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductID">
-                            <img src="@("https://localhost:44344/Images/" + item.Image)" alt="" />
-                        </a>
-                        <div class="des">
-                            <h5>@item.ProductName</h5>
-                            <h4>VNĐ @item.MinPrice</h4>
-                            <h4>VNĐ @item.MinPrice.ToString("n0")</h4>
-                        </div>
-                    </div>
-                }
-            </div>
-        </section>*@
-
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="collapse navbar-collapse"></div>
@@ -65,7 +36,7 @@
                         </li>*@
                 </ul>
                 <ul class="navbar-nav">
-                    <li><a asp-controller="Cart" asp-action="Index"><i class="fa fa-light fa-cart-shopping fa-2xl" style="color:white"></i></a></li>
+                    <li><a asp-controller="Checkout" asp-action="Index"><i class="fa fa-light fa-cart-shopping fa-2xl" style="color:white"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -99,11 +70,21 @@
         </div>
     </footer>
 
+    <!--Jquery-->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <!-- Bootstrap 5 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Boostrap growl-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-growl/1.0.0/jquery.bootstrap-growl.min.js"></script>
     <!--Owl carousel-->
     <script src="~/lib/owlCarousel/owl.carousel.min.js"></script>
-    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- DataTables-->
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
+    <!--Validate-->
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <!--Custom JS-->
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
