Thiennbm - đăng nhập , đăng ký

--- a/SneakerOutside2/Views/Product/ProductDetail.cshtml
+++ b/SneakerOutside2/Views/Product/ProductDetail.cshtml
@@ -27,7 +27,7 @@
                             }
                         </div>
                         <div class="col-12 pb-4">
-                            <button class="btn btn-dark col-12 btn-lg" id="add-to-card">Thêm vào giỏ hàng</button>
+                            <button class="btn btn-dark col-12" id="add-to-card">Thêm vào giỏ hàng</button>
                         </div>
                         <hr />
                         <div class="col-12">
